[gd_scene load_steps=3 format=2]

[ext_resource path="res://images/AppSPR/spr_navigation.png" type="Texture" id=1]
[ext_resource path="res://Logic/Scripts de escenas/Navigation.gd" type="Script" id=2]

[node name="Navigation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 317.0
margin_bottom = 479.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="B_explorar" type="Button" parent="."]
margin_left = 24.0
margin_top = 431.0
margin_right = 65.0
margin_bottom = 468.0
flat = true

[node name="B_usuario" type="Button" parent="."]
margin_left = 82.6445
margin_top = 431.0
margin_right = 123.645
margin_bottom = 468.0
flat = true

[node name="B_pedidos" type="Button" parent="."]
margin_left = 145.362
margin_top = 434.258
margin_right = 186.362
margin_bottom = 471.258
flat = true

[node name="B_settings" type="Button" parent="."]
margin_left = 203.192
margin_top = 434.258
margin_right = 244.192
margin_bottom = 471.258
flat = true

[node name="B_navigattion" type="Button" parent="."]
margin_left = 262.651
margin_top = 431.815
margin_right = 303.651
margin_bottom = 468.815
flat = true
[connection signal="button_down" from="B_explorar" to="." method="_on_B_explorar_button_down"]
[connection signal="button_down" from="B_usuario" to="." method="_on_B_usuario_button_down"]
[connection signal="button_down" from="B_pedidos" to="." method="_on_B_pedidos_button_down"]
[connection signal="button_down" from="B_settings" to="." method="_on_B_settings_button_down"]
[connection signal="button_down" from="B_navigattion" to="." method="_on_B_navigattion_button_down"]
